--- a/choice-coin-entry/templates/corporatecreate.html
+++ b/choice-coin-entry/templates/corporatecreate.html
@@ -32,6 +32,9 @@
   <input id = "main_5" type = "text" name = "Name" placeholder="John Smith"><br>
   <label for = "main_1">Ownership Stake as percentage:</label>
   <input id = "main_1" type = "number" name = "Stake" size = "40" placeholder = "20"><br>
+  <input type="radio" name="options" id="option1" value="newbie">NEWBIE</input><br>
+  <input type="radio" name="options" id="option2" value="master">MASTER</input><br>
+  <input type="radio" name="options" id="option1" value="emeritus">Proposition One</input><br>
   <label for = "main">Stakeholder's Secret Key:</label>
   <input id = "main" type="password" name="Secret" placeholder="Secret Key"><br>
   <label for = "main_4">Administrator Key:</label>
