--- a/choice-coin-entry/templates/header.html
+++ b/choice-coin-entry/templates/header.html
@@ -1,24 +1,39 @@
 <section class="navigation">
-    <div class="nav-container">
-      <div class="brand">
-        <a href="../">Choice Coin</a>
-      </div>
-      <nav>
-        <div class="nav-mobile"><a id="nav-toggle" href="../"><span></span></a></div>
-        <ul class="nav-list">
-          <li>
-            <a href = '/create'>Add a voter</a>
-            </li>
-            <li>
-              <a href = "/start">Start Electoral Voting Process</a>
-            <li>
-              <a href="/vote">Participate in Voting Process</a>
-            </li>
-            <li>
-              <a href = "/end">End Voting Process</a>
-              </li>
-
-        </ul>
-      </nav>
+  <div class="nav-container">
+    <div class="brand">
+      <a href="../">Choice Coin</a>
     </div>
-  </section>
+    <nav>
+      <div class="nav-mobile">
+        <a id="nav-toggle" href="../"><span></span></a>
+      </div>
+      <ul class="nav-list">
+        <li>
+          <a href="/corporate/admin/signup">Admin Signup</a>
+        </li>
+        <li>
+          <a href="/corporate/admin/login">Admin Login</a>
+        </li>
+        <li>
+          <a href="/corporate/project/add">Add a Project</a>
+        </li>
+        <li>
+          <a href="/corporate/executives/add">Add an Executive Position</a>
+        </li>
+        <li>
+          <a href="/corporate/start">Start Electoral Voting Process</a>
+        </li>
+
+        <li>
+          <a href="/corporate/vote">Participate in Voting Process</a>
+        </li>
+        <li>
+          <a href="/corporate/end">End Voting Process</a>
+        </li>
+        <li>
+          <a href="/corporate/result">Result of the Voting Process</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</section>
