--- a/choice-coin-entry/templates/header.html
+++ b/choice-coin-entry/templates/header.html
@@ -15,6 +15,9 @@
           <a href="/corporate/admin/login">Admin Login</a>
         </li>
         <li>
+          <a href="/corporate/admin/signout">Admin Login</a>
+        </li>
+        <li>
           <a href="/corporate/project/add">Add a Project</a>
         </li>
         <li>
