--- a/choice-coin-entry/templates/adminSignIn.html
+++ b/choice-coin-entry/templates/adminSignIn.html
@@ -1,90 +1,44 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register - Free Bulma template</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/15181efa86.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
   </head>
 
   <body>
-    {% include 'head.html' %}
+    {% include 'header.html' %}
 
     <section class="container">
       <div class="columns is-multiline">
         <div class="column is-8 is-offset-2 register">
           <div class="columns">
             <div class="column left">
-              <h1 class="title is-1">The Squid Choices</h1>
+              <h1 class="title is-1">Super Cool Website</h1>
               <h2 class="subtitle colored is-4">Lorem ipsum dolor sit amet.</h2>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Corporis ex deleniti aliquam tempora libero excepturi vero
-                soluta odio optio sed.
-              </p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ex deleniti aliquam tempora libero excepturi vero soluta odio optio sed.</p>
             </div>
             <div class="column right has-text-centered">
-              {% with messages = get_flashed_messages(with_categories=true) %}
-              {% if messages %} {% for category, message in messages %}
-              <div class="notification is-{{ category }}" role="alert">
-                <button class="delete"></button>
-                {{ message|capitalize }}
-              </div>
-              {% endfor %} {% endif %} {% endwith %}
               <h1 class="title is-4">Sign up today</h1>
-              <p class="description">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit
-              </p>
-              <form action="{{ uumethodsumethodsmethods=["GET", "POST"]rl_for('adminSignUp') }}" method="post">
+              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+              <form>
                 <div class="field">
                   <div class="control">
-                    <input
-                      class="input is-medium"
-                      type="text"
-                      name="username"
-                      placeholder="Username"
-                    />
+                    <input class="input is-medium" type="text" placeholder="Name">
                   </div>
                 </div>
 
                 <div class="field">
                   <div class="control">
-                    <input
-                      class="input is-medium"
-                      type="email"
-                      name="email"
-                      placeholder="Email"
-                    />
+                    <input class="input is-medium" type="email" placeholder="Email">
                   </div>
                 </div>
-
-                <div class="field">
-                  <div class="control">
-                    <input
-                      class="input is-medium"
-                      type="password"
-                      name="password"
-                      placeholder="Password"
-                    />
-                  </div>
-                </div>
-                <button
-                  class="button is-block is-primary is-fullwidth is-medium"
-                >
-                  Submit
-                </button>
+                <button class="button is-block is-primary is-fullwidth is-medium">Submit</button>
                 <br />
                 <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
               </form>
@@ -92,26 +46,22 @@
           </div>
         </div>
         <div class="column is-8 is-offset-2">
-          <br />
+          <br>
           <nav class="level">
             <div class="level-left">
               <div class="level-item">
                 <span class="icon">
                   <i class="fab fa-twitter"></i>
-                </span>
-                &emsp;
+                </span> &emsp;
                 <span class="icon">
                   <i class="fab fa-facebook"></i>
-                </span>
-                &emsp;
+                </span> &emsp;
                 <span class="icon">
                   <i class="fab fa-instagram"></i>
-                </span>
-                &emsp;
+                </span> &emsp;
                 <span class="icon">
                   <i class="fab fa-github"></i>
-                </span>
-                &emsp;
+                </span> &emsp;
                 <span class="icon">
                   <i class="fas fa-envelope"></i>
                 </span>
@@ -207,5 +157,7 @@
       color: var(--textLight);
       margin-right: 1rem;
     }
+
   </style>
+
 </html>
