--- a/choice-coin-entry/templates/footer.html
+++ b/choice-coin-entry/templates/footer.html
@@ -1,3 +1,9 @@
-<footer>
-    <center><b>Safety Disclaimer.</b> We never store your data. Everything is encrypted.<br></center>
-</footer>
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Squid Choice</strong> by <a href="/">Wasp IX</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
