--- a/choice-coin-entry/templates/header.html
+++ b/choice-coin-entry/templates/header.html
@@ -1,42 +1,69 @@
-<section class="navigation">
-  <div class="nav-container">
-    <div class="brand">
-      <a href="../">Choice Coin</a>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a>
+  
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
     </div>
-    <nav>
-      <div class="nav-mobile">
-        <a id="nav-toggle" href="../"><span></span></a>
+  
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item">
+          Home
+        </a>
+  
+        <a class="navbar-item" href="/corporate/about">
+          About
+        </a>
+  
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Admin
+          </a>
+  
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/corporate/admin/signup">
+              Sign Up
+            </a>
+            <a class="navbar-item" href="/corporate/admin/login">
+              Sign In
+            </a>
+            <a class="navbar-item" href="/corporate/project/add">
+              Add a project
+            </a>
+            <a class="navbar-item" href="/corporate/executives/add">
+                Add an executive
+              </a>
+              <a class="navbar-item" href="/corporate/vote/start">
+                Start electoral voting process
+              </a>
+              <a class="navbar-item" href="/corporate/vote/end">
+                End electoral voting process
+              </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              Report an issue
+            </a>
+          </div>
+        </div>
       </div>
-      <ul class="nav-list">
-        <li>
-          <a href="/corporate/admin/signup">Admin Signup</a>
-        </li>
-        <li>
-          <a href="/corporate/admin/login">Admin Login</a>
-        </li>
-        <li>
-          <a href="/corporate/admin/signout">Admin Login</a>
-        </li>
-        <li>
-          <a href="/corporate/project/add">Add a Project</a>
-        </li>
-        <li>
-          <a href="/corporate/executives/add">Add an Executive Position</a>
-        </li>
-        <li>
-          <a href="/corporate/start">Start Electoral Voting Process</a>
-        </li>
-
-        <li>
-          <a href="/corporate/vote">Participate in Voting Process</a>
-        </li>
-        <li>
-          <a href="/corporate/end">End Voting Process</a>
-        </li>
-        <li>
-          <a href="/corporate/result">Result of the Voting Process</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</section>
+  
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-primary" href="/corporate/vote">
+              <strong>Vote</strong>
+            </a>
+            <a class="button is-light" href="/corporate/vote/results">
+              View Results
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
