--- a/choice-coin-entry/templates/adminLogIn.html
+++ b/choice-coin-entry/templates/adminLogIn.html
@@ -1,44 +1,79 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Register - Free Bulma template</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Admin - Log In</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/15181efa86.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
+    />
   </head>
 
   <body>
-    {% include 'header.html' %}
+    {% include 'head.html' %}
 
     <section class="container">
       <div class="columns is-multiline">
         <div class="column is-8 is-offset-2 register">
           <div class="columns">
             <div class="column left">
-              <h1 class="title is-1">Super Cool Website</h1>
+              <h1 class="title is-1">The Squid Choices</h1>
               <h2 class="subtitle colored is-4">Lorem ipsum dolor sit amet.</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ex deleniti aliquam tempora libero excepturi vero soluta odio optio sed.</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ex deleniti aliquam tempora libero excepturi vero
+                soluta odio optio sed.
+              </p>
             </div>
             <div class="column right has-text-centered">
-              <h1 class="title is-4">Sign up today</h1>
-              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
-              <form>
+              {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %} {% for category, message in messages %}
+              <div class="notification is-{{ category }} is-light" role="alert">
+                <button class="delete"></button>
+                {{ message|capitalize }}
+              </div>
+              {% endfor %} {% endif %} {% endwith %}
+              <h1 class="title is-4">Admin - Log In</h1>
+              <p class="description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit
+              </p>
+              <form action="{{ url_for('adminLogIn') }}" method="post">
                 <div class="field">
                   <div class="control">
-                    <input class="input is-medium" type="text" placeholder="Name">
+                    <input
+                      class="input is-medium"
+                      type="text"
+                      name="username"
+                      placeholder="Username"
+                    />
                   </div>
                 </div>
 
                 <div class="field">
                   <div class="control">
-                    <input class="input is-medium" type="email" placeholder="Email">
+                    <input
+                      class="input is-medium"
+                      type="password"
+                      name="password"
+                      placeholder="Password"
+                    />
                   </div>
                 </div>
-                <button class="button is-block is-primary is-fullwidth is-medium">Submit</button>
+                <button
+                  class="button is-block is-primary is-fullwidth is-medium"
+                >
+                  Submit
+                </button>
                 <br />
                 <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
               </form>
@@ -46,22 +81,26 @@
           </div>
         </div>
         <div class="column is-8 is-offset-2">
-          <br>
+          <br />
           <nav class="level">
             <div class="level-left">
               <div class="level-item">
                 <span class="icon">
                   <i class="fab fa-twitter"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fab fa-facebook"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fab fa-instagram"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fab fa-github"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fas fa-envelope"></i>
                 </span>
@@ -76,6 +115,19 @@
         </div>
       </div>
     </section>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        (document.querySelectorAll(".notification .delete") || []).forEach(
+          ($delete) => {
+            const $notification = $delete.parentNode;
+
+            $delete.addEventListener("click", () => {
+              $notification.parentNode.removeChild($notification);
+            });
+          }
+        );
+      });
+    </script>
   </body>
   <style>
     :root {
@@ -157,7 +209,5 @@
       color: var(--textLight);
       margin-right: 1rem;
     }
-
   </style>
-
 </html>
