Made changes to endpoints and utilities

--- a/choice-coin-entry/templates/createProject.html
+++ b/choice-coin-entry/templates/createProject.html
@@ -53,7 +53,7 @@
                     <input
                       class="input is-medium"
                       type="text"
-                      name="text"
+                      name="title"
                       placeholder="Title"
                     />
                   </div>
