Fixed dependency issues

--- a/choice-coin-entry/templates/createProject.html
+++ b/choice-coin-entry/templates/createProject.html
@@ -54,7 +54,7 @@
                       class="input is-medium"
                       type="text"
                       name="title"
-                      placeholder="Title"
+                      placeholder="Project Title"
                     />
                   </div>
                 </div>
