--- a/choice-coin-entry/templates/head.html
+++ b/choice-coin-entry/templates/head.html
@@ -12,20 +12,22 @@
     </div>
     <div id="navbarMenu" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item is-active">Home</a>
-        <a class="navbar-item">Examples</a>
-        <a class="navbar-item">Features</a>
-        <a class="navbar-item">Team</a>
-        <a class="navbar-item">Archives</a>
+        <a class="navbar-item is-active" href="/">Home</a>
+        <a class="navbar-item" href="/corporate/poll">Vote</a>
+        <a class="navbar-item" href="/corporate/about">About</a>
+        <a class="navbar-item" href="/corporate/contact">Contact Us</a>
         <a class="navbar-item">Help</a>
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">Account</a>
+          <a class="navbar-link">Admin</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item">Dashboard</a>
-            <a class="navbar-item">Profile</a>
-            <a class="navbar-item">Settings</a>
+            <a class="navbar-item" href="/corporate/admin/signup">Sign Up</a>
+            <a class="navbar-item" href="/corporate/admin/login">Log In</a>
+            <a class="navbar-item" href="/corporate/project/add">Add Project</a>
+            <a class="navbar-item" href="/corporate/executives/add">Add Shareholders</a>
+            <a class="navbar-item" href="/corporate/admin/start">Start Vote</a>
+            <a class="navbar-item" href="/corporate/admin/end">End Vote</a>
             <hr class="navbar-divider" />
-            <div class="navbar-item">Logout</div>
+            <div class="navbar-item" href="/corporate/admin/signout">Logout</div>
           </div>
         </div>
       </div>
