Added project and executives files

--- a/choice-coin-entry/templates/createExecutives.html
+++ b/choice-coin-entry/templates/createExecutives.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Admin - Log In</title>
+    <title>Admin - Add Stockholders</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -43,7 +43,7 @@
                 {{ message|capitalize }}
               </div>
               {% endfor %} {% endif %} {% endwith %}
-              <h1 class="title is-4">Admin - Log In</h1>
+              <h1 class="title is-4">Admin - Add Stockholders</h1>
               <p class="description">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit
               </p>
