--- a/choice-coin-entry/templates/createProject.html
+++ b/choice-coin-entry/templates/createProject.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Admin - Sign Up</title>
+    <title>Admin - Create a Project</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -56,6 +56,31 @@
                       name="title"
                       placeholder="Project Title"
                     />
+                  </div>
+                </div>
+                <div class="field">
+                  <div class="file has-name">
+                    <label class="file-label">
+                      <input class="file-input" type="file" name="image-file" />
+                      <span class="file-cta">
+                        <span class="file-icon">
+                          <i class="fas fa-upload"></i>
+                        </span>
+                        <span class="file-label"> Choose a file… </span>
+                      </span>
+                      <span class="file-name">
+                        Upload Project Image
+                      </span>
+                    </label>
+                  </div>
+                </div>
+
+                <div class="field">
+                  <div class="control">
+                    <textarea
+                      class="textarea"
+                      placeholder="Description"
+                    ></textarea>
                   </div>
                 </div>
                 <button
