Formatted code using black
```pip install black```

--- a/choice-coin-entry/templates/poll.html
+++ b/choice-coin-entry/templates/poll.html
@@ -1,57 +1,101 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="../images/fav_icon.png"
+      type="image/x-icon"
+    />
     <title>Modal Cards - Free Bulma template</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/css/OverlayScrollbars.min.css'>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/css/OverlayScrollbars.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
     <!-- Bulma Version 0.9.0-->
-    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/hero.css">
-    <link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="../static/css/hero.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/15181efa86.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
+    />
     <style>
-    .columns:nth-child(2)
-    {margin-top: -10rem;}
+      .columns:nth-child(2) {
+        margin-top: -10rem;
+      }
     </style>
   </head>
   <body>
     {% include 'head.html' %}
 
-    <section class="hero is-info is-small">
+    <!-- <section class="hero is-info is-small">
       <div class="hero-body">
         <div class="container has-text-centered">
-          <p class="title">
-            Modal Cards
-          </p>
-          <p class="subtitle">
-            Subtitle
-          </p>
+          <p class="title">Modal Cards</p>
+          <p class="subtitle">Subtitle</p>
         </div>
       </div>
-    </section>
-    <div class="box cta">
+    </section> -->
+    <!-- <div class="box cta">
       <p class="has-text-centered">
-        <span class="tag is-primary">New</span> Here we have modal cards. When you click on them they will open functional modal examples.
+        <span class="tag is-primary">New</span> Here we have modal cards. When
+        you click on them they will open functional modal examples.
       </p>
-    </div>
+    </div> -->
     <section class="container">
       <div class="columns features">
+      <!-- for projects in projects -->
         <div class="column is-4">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/RWnpyGtY1aU" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+                <img
+                  src="https://source.unsplash.com/RWnpyGtY1aU"
+                  alt="Placeholder image"
+                  class="modal-button"
+                  data-target="modal-image2"
+                />
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>Click on image above</h4>
-                <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
-                <span class="button is-link modal-button" data-target="modal-image2">Image modal</span>
+                <p>
+                  Purus semper eget duis at tellus at urna condimentum mattis.
+                  Non blandit massa enim nec. Integer enim neque volutpat ac
+                  tincidunt vitae semper quis. Accumsan tortor posuere ac ut
+                  consequat semper viverra nam.
+                </p>
+                <span
+                  class="button is-link modal-button"
+                  data-target="modal-image2"
+                  >Vote</span
+                >
               </div>
             </div>
           </div>
@@ -60,15 +104,26 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img
+                  src="https://source.unsplash.com/6Ticnhs1AG0"
+                  alt="Placeholder image"
+                />
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>Tempor orci dapibus faber in.</h4>
-                <p>Ut venenatis tellus in metus vulputate. Amet consectetur adipiscing elit pellentesque. Sed arcu non odio euismod lacinia at quis risus. Faucibus turpis in eu mi bibendum neque egestas cmonsu songue. Phasellus vestibulum lorem
-                sed risus.</p>
-                <span class="button is-link modal-button" data-target="modal-card">Modal Card</span>
+                <p>
+                  Ut venenatis tellus in metus vulputate. Amet consectetur
+                  adipiscing elit pellentesque. Sed arcu non odio euismod
+                  lacinia at quis risus. Faucibus turpis in eu mi bibendum neque
+                  egestas cmonsu songue. Phasellus vestibulum lorem sed risus.
+                </p>
+                <span
+                  class="button is-link modal-button"
+                  data-target="modal-card"
+                  >Vote</span
+                >
               </div>
             </div>
           </div>
@@ -77,20 +132,32 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="Placeholder image">
+                <img
+                  src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg"
+                  alt="Placeholder image"
+                />
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>Click anywhere on card</h4>
-                <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim. Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                <span class="button is-link modal-button" data-target="modal-image">Image modal</span>
+                <p>
+                  Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut
+                  placerat orci nulla pellentesque dignissim enim. Libero id
+                  faucibus nisl tincidunt eget nullam. Commodo viverra maecenas
+                  accumsan lacus vel facilisis.
+                </p>
+                <span
+                  class="button is-link modal-button"
+                  data-target="modal-image"
+                  >Vote</span
+                >
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="columns features">
+      <!-- <div class="columns features">
         <div class="column is-4 modal-button" data-target="modal-card">
           <div class="card is-shady">
             <div class="card-image">
@@ -123,9 +190,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
-    <footer>
+    <!-- <footer>
       <section class="section">
         <div class="container">
           <div class="columns is-multiline">
@@ -244,7 +311,7 @@
           </a>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!--  ===============
     HERE BE MODALS
     ===============  -->
@@ -252,18 +319,23 @@
     <div id="modal-card" class="modal modal-fx-3dSlit">
       <div class="modal-background"></div>
       <div class="modal-content is-tiny">
-        <!-- content -->
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img
+                src="https://source.unsplash.com/6Ticnhs1AG0"
+                alt="Placeholder image"
+              />
             </figure>
           </div>
           <div class="card-content">
             <div class="media">
               <div class="media-left">
                 <figure class="image is-48x48">
-                  <img src="http://www.radfaces.com/images/avatars/linda-barret.jpg" alt="linda barret avatar">
+                  <img
+                    src="http://www.radfaces.com/images/avatars/linda-barret.jpg"
+                    alt="linda barret avatar"
+                  />
                 </figure>
               </div>
               <div class="media-content">
@@ -272,19 +344,28 @@
               </div>
             </div>
             <div class="content">
-              Laum Ipsum junkah potatoes bookin' it. Moosetown rig up I'm tellin' you way up north bookin' it can't get theyah from heeyah native bean suppah whawf Powrtland Museum of Aht, back woods hawsun around the pit mummah Yessah, mummah muckle riyht on'ta her
-              Bean's dinnahbucket bub geez bud sumpin' fierce ayuhpawt Bangah naw, Powrtland Museum of Aht down cellah sumpin' fierce hoppa bub If you can't stand the wintah you don't deserve the summah slower than molasses going uphill in January.
-              Sgn'wahl shoggor hrii uaaah R'lyeh uh'e k'yarnak Hastur hupadgh li'hee, hai f'nilgh'ri nilgh'ri n'ghftor ngftaghu vulgtlagln h'hrii throd Nyarlathotep lloig, naflsll'ha nnnsll'ha athg y-ebunma goka chtenff ehyeog cehye. Zhro y'hah
-              nogoth phlegeth stell'bsna orr'e ph'Hastur gnaiih throd, uln ya lw'nafh mg nar'luh li'hee wgah'n, sgn'wahl mg nakadishtu chlirgh hupadgh tharanak h'gnaiih.
+              Laum Ipsum junkah potatoes bookin' it. Moosetown rig up I'm
+              tellin' you way up north bookin' it can't get theyah from heeyah
+              native bean suppah whawf Powrtland Museum of Aht, back woods
+              hawsun around the pit mummah Yessah, mummah muckle riyht on'ta her
+              Bean's dinnahbucket bub geez bud sumpin' fierce ayuhpawt Bangah
+              naw, Powrtland Museum of Aht down cellah sumpin' fierce hoppa bub
+              If you can't stand the wintah you don't deserve the summah slower
+              than molasses going uphill in January. Sgn'wahl shoggor hrii uaaah
+              R'lyeh uh'e k'yarnak Hastur hupadgh li'hee, hai f'nilgh'ri
+              nilgh'ri n'ghftor ngftaghu vulgtlagln h'hrii throd Nyarlathotep
+              lloig, naflsll'ha nnnsll'ha athg y-ebunma goka chtenff ehyeog
+              cehye. Zhro y'hah nogoth phlegeth stell'bsna orr'e ph'Hastur
+              gnaiih throd, uln ya lw'nafh mg nar'luh li'hee wgah'n, sgn'wahl mg
+              nakadishtu chlirgh hupadgh tharanak h'gnaiih.
               <a>@bulmaio</a>.
               <a href="#">#css</a>
               <a href="#">#responsive</a>
-              <br>
+              <br />
               <time datetime="2018-02-02">12:45 AM - 20 June 2018</time>
             </div>
           </div>
         </div>
-        <!-- end content -->
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
     </div>
@@ -297,14 +378,20 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/hLyd1LukQ7E" alt="butterfly">
+              <img
+                src="https://source.unsplash.com/hLyd1LukQ7E"
+                alt="butterfly"
+              />
             </figure>
           </div>
           <div class="card-content">
             <div class="media">
               <div class="media-left">
                 <figure class="image is-48x48">
-                  <img src="http://www.radfaces.com/images/avatars/linda-barret.jpg" alt="linda barret avatar">
+                  <img
+                    src="http://www.radfaces.com/images/avatars/linda-barret.jpg"
+                    alt="linda barret avatar"
+                  />
                 </figure>
               </div>
               <div class="media-content">
@@ -313,14 +400,24 @@
               </div>
             </div>
             <div class="content">
-              Laum Ipsum junkah potatoes bookin' it. Moosetown rig up I'm tellin' you way up north bookin' it can't get theyah from heeyah native bean suppah whawf Powrtland Museum of Aht, back woods hawsun around the pit mummah Yessah, mummah muckle riyht on'ta her
-              Bean's dinnahbucket bub geez bud sumpin' fierce ayuhpawt Bangah naw, Powrtland Museum of Aht down cellah sumpin' fierce hoppa bub If you can't stand the wintah you don't deserve the summah slower than molasses going uphill in January.
-              Sgn'wahl shoggor hrii uaaah R'lyeh uh'e k'yarnak Hastur hupadgh li'hee, hai f'nilgh'ri nilgh'ri n'ghftor ngftaghu vulgtlagln h'hrii throd Nyarlathotep lloig, naflsll'ha nnnsll'ha athg y-ebunma goka chtenff ehyeog cehye. Zhro y'hah
-              nogoth phlegeth stell'bsna orr'e ph'Hastur gnaiih throd, uln ya lw'nafh mg nar'luh li'hee wgah'n, sgn'wahl mg nakadishtu chlirgh hupadgh tharanak h'gnaiih.
+              Laum Ipsum junkah potatoes bookin' it. Moosetown rig up I'm
+              tellin' you way up north bookin' it can't get theyah from heeyah
+              native bean suppah whawf Powrtland Museum of Aht, back woods
+              hawsun around the pit mummah Yessah, mummah muckle riyht on'ta her
+              Bean's dinnahbucket bub geez bud sumpin' fierce ayuhpawt Bangah
+              naw, Powrtland Museum of Aht down cellah sumpin' fierce hoppa bub
+              If you can't stand the wintah you don't deserve the summah slower
+              than molasses going uphill in January. Sgn'wahl shoggor hrii uaaah
+              R'lyeh uh'e k'yarnak Hastur hupadgh li'hee, hai f'nilgh'ri
+              nilgh'ri n'ghftor ngftaghu vulgtlagln h'hrii throd Nyarlathotep
+              lloig, naflsll'ha nnnsll'ha athg y-ebunma goka chtenff ehyeog
+              cehye. Zhro y'hah nogoth phlegeth stell'bsna orr'e ph'Hastur
+              gnaiih throd, uln ya lw'nafh mg nar'luh li'hee wgah'n, sgn'wahl mg
+              nakadishtu chlirgh hupadgh tharanak h'gnaiih.
               <a>@bulmaio</a>.
               <a href="#">#css</a>
               <a href="#">#responsive</a>
-              <br>
+              <br />
               <time datetime="2018-02-02">12:45 AM - 20 May 2018</time>
             </div>
           </div>
@@ -335,7 +432,7 @@
       <div class="modal-background"></div>
       <div class="modal-content is-huge is-image">
         <!-- content -->
-        <img src="https://source.unsplash.com/RWnpyGtY1aU" alt="image">
+        <img src="https://source.unsplash.com/RWnpyGtY1aU" alt="image" />
         <!-- end content -->
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
@@ -345,7 +442,7 @@
       <div class="modal-background"></div>
       <div class="modal-content is-huge is-image">
         <!-- content -->
-        <img src="https://source.unsplash.com/hLyd1LukQ7E" alt="butterfly">
+        <img src="https://source.unsplash.com/hLyd1LukQ7E" alt="butterfly" />
         <!-- end content -->
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
@@ -353,24 +450,62 @@
     <!-- Image modal-->
     <div id="modal-image" class="modal modal-fx-superScaled">
       <div class="modal-background"></div>
-      <div class="modal-content  is-image">
+      <div class="modal-content is-image">
         <!-- content -->
-        <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="Placeholder image">
+        <img
+          src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg"
+          alt="Placeholder image"
+        />
         <!--     <img src="https://source.unsplash.com/zFrUz_tNjCY" alt="placeholder">
-        -->    <!-- end content -->
+        -->
+        <!-- end content -->
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
     </div>
+    <!-- bulma template footer by stemitom -->
+    <div class="column is-8 is-offset-2">
+      <br />
+      <nav class="level">
+        <div class="level-left">
+          <div class="level-item">
+            <span class="icon">
+              <i class="fab fa-twitter"></i>
+            </span>
+            &emsp;
+            <span class="icon">
+              <i class="fab fa-facebook"></i>
+            </span>
+            &emsp;
+            <span class="icon">
+              <i class="fab fa-instagram"></i>
+            </span>
+            &emsp;
+            <span class="icon">
+              <i class="fab fa-github"></i>
+            </span>
+            &emsp;
+            <span class="icon">
+              <i class="fas fa-envelope"></i>
+            </span>
+          </div>
+        </div>
+        <div class="level-right">
+          <small class="level-item" style="color: var(--textLight)">
+            &copy; Super Cool Website. All Rights Reserved.
+          </small>
+        </div>
+      </nav>
+    </div>
     <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/js/OverlayScrollbars.min.js'></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/js/OverlayScrollbars.min.js"></script>
     <script src="../js/wild.js"></script>
-        <script>
-        document.addEventListener("DOMContentLoaded", function() {
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
         //The first argument are the elements to which the plugin shall be initialized
         //The second argument has to be at least a empty object or a object with your desired options
-        OverlayScrollbars(document.querySelectorAll("body"), { });
-        });
-        </script>  
+        OverlayScrollbars(document.querySelectorAll("body"), {});
+      });
+    </script>
   </body>
 </html>
