--- a/choice-coin-entry/templates/head.html
+++ b/choice-coin-entry/templates/head.html
@@ -27,7 +27,7 @@
             <a class="navbar-item" href="/corporate/admin/start">Start Vote</a>
             <a class="navbar-item" href="/corporate/admin/end">End Vote</a>
             <hr class="navbar-divider" />
-            <div class="navbar-item" href="/corporate/admin/signout">Logout</div>
+<a href="{{ url_for("adminLogOut") }}"><div class="navbar-item" >Logout</div></a>
           </div>
         </div>
       </div>
