--- a/choice-coin-entry/templates/createExecutives.html
+++ b/choice-coin-entry/templates/createExecutives.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Admin - Add Stockholders</title>
+    <title>Admin - Add Voters</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -27,12 +27,14 @@
         <div class="column is-8 is-offset-2 register">
           <div class="columns">
             <div class="column left">
-              <h1 class="title is-1">The Squid Choices</h1>
-              <h2 class="subtitle colored is-4">Lorem ipsum dolor sit amet.</h2>
+              <h1 class="title is-1">Choice Coin</h1>
+              <h2 class="subtitle colored is-4">
+                <em>A democratic token for a new era.</em>
+              </h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Corporis ex deleniti aliquam tempora libero excepturi vero
-                soluta odio optio sed.
+                A governance token that powers the Fortior Voting Protocol,
+                which leverages Artificial Intelligence and Quantum Computing to
+                voting algorithms that are secure, efficient, and equitable.
               </p>
             </div>
             <div class="column right has-text-centered">
@@ -43,9 +45,9 @@
                 {{ message|capitalize }}
               </div>
               {% endfor %} {% endif %} {% endwith %}
-              <h1 class="title is-4">Admin - Add Stockholders</h1>
+              <h1 class="title is-4">Admin - Add Voters</h1>
               <p class="description">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit
+                Welcome to Choice Coin, please input the details to proceed
               </p>
               <form action="{{ url_for('createExecutives') }}" method="post">
                 <div class="field">
@@ -88,7 +90,7 @@
                   Submit
                 </button>
                 <br />
-                <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
+                <small><em>A democratic token for a new era.</em></small>
               </form>
             </div>
           </div>
@@ -121,7 +123,7 @@
             </div>
             <div class="level-right">
               <small class="level-item" style="color: var(--textLight)">
-                &copy; Super Cool Website. All Rights Reserved.
+                &copy; The Choice Voting Mechanism
               </small>
             </div>
           </nav>
